@@ -78,6 +78,8 @@ INCLUDE: perl script/wx_xspp.pl -t typemap.xsp XS/ComboCtrl.xsp |
 
 INCLUDE: perl script/wx_xspp.pl -t typemap.xsp XS/OwnerDrawnComboBox.xsp |
 
+INCLUDE: perl script/wx_xspp.pl -t typemap.xsp XS/CollapsiblePane.xsp |
+
 INCLUDE: XS/Button.xs
 INCLUDE: XS/CheckBox.xs
 INCLUDE: XS/CheckListBox.xs
