@@ -167,6 +167,7 @@ wxColourPickerCtrl *    O_WXEVTHANDLER
 wxFilePickerCtrl *      O_WXEVTHANDLER
 wxDirPickerCtrl *       O_WXEVTHANDLER
 wxFontPickerCtrl *      O_WXEVTHANDLER
+wxCollapsiblePane *     O_WXEVTHANDLER
 
 wxWizard *              O_WXOBJECT
 wxWizardPage *          O_WXOBJECT
@@ -388,6 +389,7 @@ wxFileDirPickerEvent *  O_WXOBJECT_THR
 wxFontPickerEvent *     O_WXOBJECT_THR
 wxWindowCreateEvent *   O_WXOBJECT_THR
 wxWindowDestroyEvent *  O_WXOBJECT_THR
+wxCollapsiblePaneEvent * O_WXOBJECT_THR
 
 wxPlEvent *             O_WXOBJECT_THR
 wxPlCommandEvent *      O_WXOBJECT_THR
