@@ -1,8 +1,9 @@
 Revision history for Perl extension Wx.
 
 0.77
-	- Added wxGraphicsContext and some related classes
+	- Added wxGraphicsContext (2.7) and some related classes
 	  (patch by Klaas Hartmann).
+	- Added wxCollapsiblePane (2.7),
 
 0.76  Thu Aug 16 00:21:00 CEST 2007
 	- Added wxEditableListBox (2.9).
